--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,17 +13,35 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FirebaseAlgorithmTest"
         tools:targetApi="31">
+
+        <!-- FirstScreenActivity is the main activity -->
         <activity
-            android:name=".MainActivity"
+            android:name=".FirstScreenActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.FirebaseAlgorithmTest">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- RegionsActivity -->
+        <activity
+            android:name=".RegionsActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.FirebaseAlgorithmTest">
+        </activity>
+
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.FirebaseAlgorithmTest">
+        </activity>
+
+
     </application>
 
 </manifest>
