--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
             android:theme="@style/Theme.FirebaseAlgorithmTest">
         </activity>
 
+        <!-- MainActivity -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -41,6 +42,71 @@
             android:theme="@style/Theme.FirebaseAlgorithmTest">
         </activity>
 
+
+        <!-- ChisinauActivity -->
+        <activity
+            android:name=".ChisinauActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.FirebaseAlgorithmTest">
+        </activity>
+
+        <activity
+            android:name=".ChisinauParksActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.FirebaseAlgorithmTest">
+        </activity>
+
+        <activity
+            android:name=".ChisinauMuseumsActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.FirebaseAlgorithmTest">
+        </activity>
+
+        <activity
+            android:name=".ChisinauMonumentsActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.FirebaseAlgorithmTest">
+        </activity>
+
+        <activity
+            android:name=".ChisinauChurchesActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.FirebaseAlgorithmTest">
+        </activity>
+
+
+        <activity
+            android:name=".NorthernActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.FirebaseAlgorithmTest">
+        </activity>
+
+        <activity
+            android:name=".SouthernActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.FirebaseAlgorithmTest">
+        </activity>
+
+        <activity
+            android:name=".OrheiActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.FirebaseAlgorithmTest">
+        </activity>
+
+        <activity
+            android:name=".TransnistriaActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.FirebaseAlgorithmTest">
+        </activity>
 
     </application>
 
